.snakemake/log/2022-05-21T133257.505835.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/__init__.py", line 593, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.9/site-packages/snakemake/workflow.py", line 1182, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
  File "/home/jeszyman/repos/atac-seq/workflow/tmp2.smk", line 24
    @workflow.input( fastq = lambda w : return libraries [ libraries . library_id == w . library_id ] . fq_basename . tolist ( )
                                        ^
SyntaxError: invalid syntax

SyntaxError in line 24 of /home/jeszyman/repos/atac-seq/workflow/tmp2.smk:
invalid syntax (tmp2.smk, line 24)
